<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TakaApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="taka_app">Taka App</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="submit">Submit</string>
    <string name="quantity">Enter Quantity</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_activity_conclusion_screen">ConclusionScreenActivity</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_transaction">Transaction</string>
	<string name="forgot_password">forgot password?</string>
	<string name="register">Register|</string>
	<string name="plastic">Plastic</string>
	<string name="metal">Metal</string>
	<string name="btn_sell">Sell</string>
	<string name="btn_buy">Buy</string>

</resources>
