<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:background="@color/green"
	    tools:context="com.example.takaapplication.LoginScreen" >

    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/taka_app"
	        android:src="@drawable/taka_app_logo"
	        android:layout_above="@+id/etusername"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="80dp"/>

    <EditText
	        android:id="@+id/etusername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/white"
	        android:inputType="text"
	        android:padding="10dp"
	        android:ems="10"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
			android:hint="@string/username"
			android:layout_marginBottom="62dp"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp">

        <requestFocus />
    </EditText>

    <EditText
	        android:id="@+id/etpassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/white"
	        android:ems="10"
	        android:inputType="textPassword"
	        android:padding="10dp"
	        android:hint="@string/password"
	        android:layout_alignTop="@+id/etusername"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="61dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"/>

    <Button
	        android:id="@+id/btnlogin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/buttons_style"
	        android:text="@string/login"
	        android:layout_marginTop="38dp"
	        android:layout_below="@+id/etusername"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="50dp"
	        android:layout_marginRight="50dp"
		    android:textSize="20sp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/forgot_password"
			android:textSize="15sp"
			android:id="@+id/tvfogortpassword"
			android:layout_alignBaseline="@+id/tvregister"
			android:layout_alignBottom="@+id/tvregister"
			android:layout_alignRight="@+id/btnlogin"
			android:textColor="@android:color/black"
			android:layout_marginRight="30dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/register"
			android:textSize="15sp"
			android:id="@+id/tvregister"
			android:layout_alignParentBottom="true"
			android:layout_alignLeft="@+id/btnlogin"
			android:layout_marginBottom="50dp"
			android:textColor="@android:color/black"
			android:layout_marginLeft="40dp"/>

</RelativeLayout>