<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.takaapplication.Transaction"
		android:background="@color/green">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/taka_app_logo"
			android:contentDescription="@string/taka_app"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:id="@+id/imageView"/>

    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/plastic"
		    android:textColor="@android:color/black"
		    android:textSize="20sp"
		    android:id="@+id/textView2"
		    android:layout_centerVertical="true"
		    android:layout_alignLeft="@+id/imageView"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/metal"
			android:textColor="@android:color/black"
			android:textSize="20sp"
			android:id="@+id/textView"
			android:layout_marginTop="49dp"
			android:layout_below="@+id/btnBuy1"
			android:layout_alignLeft="@+id/textView2"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_sell"
			android:id="@+id/btnSell1"
			android:layout_centerVertical="true"
			android:padding="20dp"
			android:background="@drawable/buttons_style"
			android:maxWidth="100dp"
			android:layout_toRightOf="@+id/btnBuy1"
			android:layout_marginLeft="10dp"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_buy"
			android:id="@+id/btnBuy1"
			android:padding="20dp"
			android:layout_alignTop="@+id/btnSell1"
			android:layout_centerHorizontal="true"
			android:background="@drawable/buttons_style"
			android:layout_marginLeft="240dp"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_sell"
			android:id="@+id/btnSell2"
			android:layout_alignTop="@+id/textView"
			android:layout_alignRight="@+id/btnSell1"
			android:padding="20dp"
			android:maxWidth="100dp"
			android:background="@drawable/buttons_style"
			android:layout_toRightOf="@+id/btnBuy2"
			android:layout_marginLeft="10dp"/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_buy"
			android:id="@+id/btnBuy2"
			android:padding="20dp"
			android:background="@drawable/buttons_style"
			android:layout_alignTop="@+id/btnSell2"
			android:layout_toLeftOf="@+id/btnSell1"
			android:layout_toRightOf="@+id/textView"
			android:layout_marginLeft="40dp"/>

</RelativeLayout>
