<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.example.takaapplication.MainScreenActivity"
	    android:background="@color/green">

    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:background="@drawable/taka_app_logo"
	        android:contentDescription="@string/taka_app"
	        android:layout_marginTop="25dp"/>

    <EditText
	        android:id="@+id/etMainEnterQntty"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@android:color/white"
	        android:ems="10"
	        android:inputType="number"
	        android:padding="10dp"
	        android:layout_below="@+id/tvMainEnterQntty"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"/>

    <TextView
	        android:id="@+id/tvMainEnterQntty"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/quantity"
	        android:textSize="18sp"
		    android:textColor="@android:color/black"
		    android:layout_centerVertical="true"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="20dp"/>

    <Button
	        android:id="@+id/btnMainSubmit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/etMainEnterQntty"
	        android:layout_marginLeft="50dp"
	        android:layout_marginRight="50dp"
	        android:layout_marginTop="50dp"
	        android:text="@string/submit"
		    android:background="@drawable/buttons_style"
		    />

</RelativeLayout>